--- a/Project code.ipynb
+++ b/Project code.ipynb
@@ -2353,7 +2353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": null,
    "id": "9bdd63fe",
    "metadata": {},
    "outputs": [
@@ -2411,7 +2411,7 @@
     "import torch\n",
     "\n",
     "# Log in to Hugging Face with your API token\n",
-    "login(token=\"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\")\n",
+    "login(token=\"Your token\")\n",
     "\n",
     "# Choose a small but capable model (you can change it later)\n",
     "model_name = \"Qwen/Qwen2-1.5B-Instruct\"\n",
